--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,7 @@
                 <div class="col-5">
                     <a class="btn btn-outline-dark btn-lg btn-block" href="movie.htm?action=view">View All Movies</a><br/>
                     <a class="btn btn-outline-dark btn-lg btn-block" href="search-movie.jsp">Search Movies</a><br/>
-                    <a class="btn btn-outline-dark btn-lg btn-block" href="add.jsp">Add a Movie</a><br/>                
+                    <a class="btn btn-outline-dark btn-lg btn-block" href="add.jsp">Add Movies</a><br/>                
                 </div>
                 <div class="col">
                 </div>
